src/test/ui/resolve/suggest-similar-type-name.stderr
error[E0433]: failed to resolve: use of undeclared type `FooTyp`
  --> $DIR/suggest-similar-type-name.rs:8:5
   |
LL |     FooTyp::bar()
   |     ^^^^^^
   |     |
   |     use of undeclared type `FooTyp`
   |     help: there is a struct with a similar name: `FooType`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
